--- a/src/styles/text.css
+++ b/src/styles/text.css
@@ -3,8 +3,13 @@ body {
   font-style: normal;
   color: rgb(0, 6, 13);
   --body-bg: radial-gradient(105% 220% at 6% 50%, #b8e3fb 0%, #80a7e1 100%);
+  --sign-in-bg: radial-gradient(
+    118% 212% at 11% -10%,
+    #aed6fb 0%,
+    #6a86ce 100%
+  );
   background: var(--body-bg);
-  min-height: 50%;
+  min-height: 70vh;
 }
 
 @-moz-document url-prefix() {
@@ -23,7 +28,7 @@ svg {
   flex-direction: column;
   height: calc(100vh - 5rem);
   position: relative;
-  overflow-y: overlay;
+  overflow: overlay;
   padding-bottom: 5rem;
   top: 5rem;
 }
@@ -34,17 +39,27 @@ svg {
 }
 
 .screen-alert-wrapper {
+  top: 0;
   width: 100%;
   height: 100%;
+  overflow: overlay;
   position: fixed;
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  background: var(--body-bg);
+  display: flex;
+  flex-direction: column;
+  padding: 3rem;
+  gap: 2rem;
+  background: var(--sign-in-bg);
   transition: 0.1s ease-in-out;
   pointer-events: none;
   opacity: 0;
   z-index: 5;
+}
+
+.screen-alert-text {
+  display: grid;
+  min-width: 20rem;
+  margin-bottom: 0 !important;
+  gap: 1rem;
 }
 
 .roster-header {
@@ -71,11 +86,7 @@ svg {
 }
 
 .sign-in-container {
-  background: radial-gradient(
-    118.53% 212.31% at 11.28% -9.85%,
-    #aed6fb 0%,
-    #6a86ce 100%
-  );
+  background: var(--sign-in-bg);
   font-weight: 500;
   font-size: 5rem;
   line-height: 116px;
@@ -86,7 +97,7 @@ svg {
   display: grid;
   padding-bottom: 6rem;
   align-content: center;
-  overflow: clip;
+  overflow: overlay;
   color: #052041;
   gap: 1.5rem;
   top: 0;
@@ -230,6 +241,7 @@ svg {
   white-space: normal;
   text-align: center;
   opacity: 50%;
+  min-width: 15rem;
   width: 75%;
 }
 
